# STM32-Driver-Bare-metal

./: .gitignore  .project  README.md
STM32_Sources/: .cproject  .project  CLION_SETUP_GUIDE.md  CMakeLists.txt  CMakePresets.json  STM32F446RETX_FLASH.ld  arm-none-eabi-toolchain.cmake  openocd.cfg  start_openocd.sh
STM32_Sources/Debug/: STM32_Project.asm  STM32_Project.elf  STM32_Project.hex  STM32_Project.list  STM32_Project.map  STM32_Project.srec  makefile  objects.list  sources.mk
STM32_Sources/Debug/System/Drivers/gpio/: subdir.mk
STM32_Sources/Debug/System/Drivers/gpio/Src/: gpio.cyclo  gpio.d  gpio.su  subdir.mk
STM32_Sources/Debug/System/Drivers/rcc/src/: rcc.cyclo  rcc.d  rcc.su  subdir.mk
STM32_Sources/Debug/System/Src/: main.cyclo  main.d  main.su  subdir.mk  syscalls.d  syscalls.su  sysmem.su
STM32_Sources/Debug/System/Startup/: subdir.mk
STM32_Sources/Release/: makefile  sources.mk
STM32_Sources/Release/System/Drivers/gpio/Src/: subdir.mk
STM32_Sources/Release/System/Src/: main.su  subdir.mk  syscalls.cyclo  syscalls.su  sysmem.cyclo  sysmem.d  sysmem.su
STM32_Sources/Release/System/Startup/: startup_stm32f446retx.d  subdir.mk
STM32_Sources/System/: CMakeLists.txt
STM32_Sources/System/Drivers/: CMakeLists.txt
STM32_Sources/System/Drivers/Timers/Inc/: timer.h  timer_reg.h
STM32_Sources/System/Drivers/Timers/Src/: timer.c
STM32_Sources/System/Drivers/dma/Inc/: dma.h  dma_reg.h
STM32_Sources/System/Drivers/dma/Src/: dma.c
STM32_Sources/System/Drivers/gpio/Inc/: gpio.h  gpio_reg.h
STM32_Sources/System/Drivers/gpio/Src/: gpio.c
STM32_Sources/System/Drivers/irq/Inc/: irq.h  irq_reg.h
STM32_Sources/System/Drivers/irq/Src/: irq.c
STM32_Sources/System/Drivers/pwr/inc/: pwr.h  pwr_reg.h
STM32_Sources/System/Drivers/pwr/src/: pwr.c
STM32_Sources/System/Drivers/rcc/inc/: rcc.h  rcc_reg.h
STM32_Sources/System/Drivers/rcc/src/: rcc.c
STM32_Sources/System/Drivers/uart/Inc/: uart.h  uart_reg.h
STM32_Sources/System/Drivers/uart/Src/: uart.c
STM32_Sources/System/Inc/: STM32F446RE_Base.h  std_types.h  syscfg.h  types.h
STM32_Sources/System/Src/: main.c
STM32_Sources/cmake/: arm-none-eabi-gcc.cmake
STM32_Sources/cmake/stm32cubemx/: CMakeLists.txt
STM32_Sources/scripts/: backup_build.sh  rebuild.sh
